# haskell-tdd

./: haskell-tdd.cabal  stack.yaml
src/Parser08/: Parser.hs
test/tasty/: ParserTest.hs  Spec.hs  TastySpec.hs
test/tasty-discover/: Driver.hs  Example2.hs  ExampleTest.hs
