cabal-version:       2.2

name:                haskell-tdd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/erohkohl/haskell-tdd#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Math.Simple
                       Parser08.Parser
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite hunit
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/hunit
  other-modules:       Math.SimpleTest
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-tdd
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite tasty
  type: exitcode-stdio-1.0
  main-is: TastySpec.hs
  other-modules:
    ParserTest
--         Paths
  hs-source-dirs:
      test/tasty
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , haskell-tdd
    , tasty
    , tasty-hunit
--    , tasty-hspec
  default-language: Haskell2010

test-suite tasty-discover
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  hs-source-dirs:
      test/tasty-discover
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , tasty-discover
    , haskell-tdd
    , tasty
--    , tasty-hunit
--    , tasty-hspec
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/erohkohl/haskell-tdd.git
